translated the french pages, all translation and links should be complete

--- a/views/aboutFR.hbs
+++ b/views/aboutFR.hbs
@@ -73,13 +73,13 @@
     <!-- Language Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/contact"><span class="flag-icon flag-icon-us"></span></a>
+            <a class="nav-link" href="/about"><span class="flag-icon flag-icon-us"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/contactCN"><span class="flag-icon flag-icon-cn"></span></a>
+            <a class="nav-link" href="/aboutCN"><span class="flag-icon flag-icon-cn"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/contactDE"><span class="flag-icon flag-icon-de"></span></a>
+            <a class="nav-link" href="/aboutDE"><span class="flag-icon flag-icon-de"></span></a>
         </li>
     </ul>
         <!-- Links -->
@@ -107,16 +107,16 @@
                     <div class="panel panel-body">
                         <img class="img-responsive" id="mainSelfie" src="Images/FranceMeIrelandRV.jpg">
                         <p>
-                            I am originally from Topeka, Kansas, but it hasn't been "home" for quite some time. From '04-'14 I lived in the Los Angeles & San Diego areas working and attending university. During school, and post graduation, I have lived in Berlin, Paris, and Hangzhou, China. I returned to Kansas in December '16 and subsequently returned to China in order to spend a year teaching web development in English to software engineering students. </p>
+                            Je suis originaire de Topeka, au Kansas, mais cela ne fait pas longtemps que je suis "chez moi". De 2004 à 2014, j'ai vécu et travaillé dans les universités de Los Angeles et de San Diego. Pendant mes études et après l'obtention de mon diplôme, j'ai vécu à Berlin, à Paris et à Hangzhou, en Chine. Je suis rentré au Kansas en décembre 16, puis en Chine pour passer une année à enseigner le développement Web en anglais à des étudiants en génie logiciel. </p>
 
                         <p>
-                            Two of my passions in life are traveling and design. Photography plays a large role in my creative life, and I feel that design is a major avenue in which I can utilize and express my creativity. Web design and the basic ability to create something from nothing inspires me greatly.
+                            Deux de mes passions dans la vie sont les voyages et le design. La photographie joue un rôle important dans ma vie créative et j'estime que le design est une avenue majeure dans laquelle je peux utiliser et exprimer ma créativité. Le design Web et la capacité de base de créer quelque chose à partir de rien m'inspire beaucoup.
                         </p>
                         <p>
-                            During my time abroad I managed to visit 24 different countries
-                            and 50 major cities. I can speak French and German with relative proficiency and I am currently working to improve my Chinese. I became more serious about photography after my study abroad program
-                            in 2011, and I believe it has expanded my skills of creativity in the process. I have advanced my skills through practice and perseverance
-                            and have won several awards for my work. Design in a broad sense is something that not only inspires me, but pushes me to always be thinking of new ways, methods, and insights into my own creativity that I never knew existed before. </p>
+                            Pendant mon séjour à l'étranger, j'ai réussi à visiter 24 pays différents
+                             et 50 grandes villes. Je parle couramment le français et l'allemand et je travaille actuellement à améliorer mon chinois. Je suis devenu plus sérieux en photographie après mon programme d'études à l'étranger
+                             en 2011, et je crois que cela a élargi mes compétences de créativité dans le processus. J'ai perfectionné mes compétences grâce à la pratique et à la persévérance
+                             et ont remporté plusieurs prix pour mon travail. Le design au sens large est une chose qui ne m'inspire pas seulement mais qui me pousse à toujours penser à de nouvelles méthodes, méthodes et perspectives dans ma propre créativité, ce que je n'avais jamais vu auparavant. </p>
 
                     </div>
                 </div>
@@ -128,32 +128,32 @@
                 <!--Education Section-->
                 <div class="panel panel-default">
                     <div class="panel panel-header">
-                        Education<i class="glyphicon glyphicon-education"></i>
+                        Éducation<i class="glyphicon glyphicon-education"></i>
                     </div>
                     <div class="panel panel-body" id="education">
                         <ul class="list-inline">
                             <li class="list-inline-item" id="KU">
-                                <h4 id="KUTitle">The University of Kansas</h4>
+                                <h4 id="KUTitle">Université du Kansas</h4>
 
-                                Coding Boot Camp - Full-Stack Web Development
+                                Codage Boot Camp - Développement Web Full-Stack
                                 <br />
-                                June 2017 - May 2018
+                                Juin 2017 - Mai 2018
                             </li>
                             <br />
                             <li class="list-inline-item" id="UCSD">
-                                <h4 id="UCSDTitle">The University of California, San Diego</h4>
+                                <h4 id="UCSDTitle">Université de Californie à San Diego</h4>
 
-                                B.S. Political Science (Minor - International Relations)
+                                B.S. Science politique (mineure - relations internationales)
                                 <br />
-                                September 2012 - August 2014
+                                Septembre 2012 - Août 2014
                             </li>
                             <br />
                             <li class="list-inline-item" id="FullColl">
-                                <h4 id="FullCollTitle">Fullerton College</h4>
+                                <h4 id="FullCollTitle">Fullerton Collège</h4>
 
-                                A.A. Film/Radio/Television
+                                A.A. Film / Radio / Télévision
                                 <br />
-                                January 2009 - May 2012
+                                Janvier 2009 - Mai 2012
                             </li>
                         </ul>
                     </div>
@@ -163,36 +163,36 @@
                 <!--Beginning Experience-->
                 <div class="panel panel-default">
                     <div class="panel panel-header">
-                        Experience<i class="glyphicon glyphicon-ok"></i>
+                        Expérience<i class="glyphicon glyphicon-ok"></i>
                     </div>
                     <div class="panel panel-body" id="education">
                         <ul class="list-inline">
                             <li class="list-inline-item" id="KU">
-                                <h4 id="KUTitle">Zhejiang University of Technology (浙江工业大学）</h4>
+                                <h4 id="KUTitle">Université de technologie du Zhejiang</h4>
 
-                                University Professor - Web Design
+                                Professeur d'Université - Web Design
                                 <br />
-                                June 2018 - June 2019
+                                Juin 2018 - Juin 2019
                                 <br />
-                                I formulated, implemented, and managed my own curriculum covering the basics of HTML5, CSS3, Javascript, and JQuery in the English language. My students were majoring in software engineering and thusly it was important for them to acquire essential language skills in both coding and communication.
+                                J'ai formulé, mis en œuvre et géré mon propre programme couvrant les bases de HTML5, CSS3, Javascript et JQuery en anglais. Mes étudiants étaient spécialisés en génie logiciel et il était donc important pour eux d'acquérir des compétences linguistiques essentielles en codage et en communication.
                             </li>
                             <br />
                             <li class="list-inline-item" id="UCSD">
-                                <h4 id="UCSDTitle">Kansas University</h4>
+                                <h4 id="UCSDTitle">Université du Kansas</h4>
 
-                                48 Week Full-Stack Coding Bootcamp
+                                Bootcamp de codage en pile complète de 48 semaines
                                 <br />
-                                June 2017 - May 2018
+                                Juin 2017 - Mai 2018
                                 <br />
-                                During the course of the program we studied, utilized, and developed essential elements of of websites as well as entire websites based on those elements. The program was comprehensive and progressive so that we learned the basic building blocks of a website then worked our way up to building entire websites utilizing all of those elements working collaboratively.
+                                Au cours du programme, nous avons étudié, utilisé et développé des éléments essentiels de sites Web, ainsi que des sites Web complets basés sur ces éléments. Le programme était complet et progressif, nous avons donc appris les éléments de base d’un site Web, puis nous avons construit des sites Web complets en utilisant tous ces éléments fonctionnant en collaboration.
                             </li>
                             <br />
                             <li class="list-inline-item" id="FullColl">
-                                <h4 id="FullCollTitle">Fullerton College</h4>
+                                <h4 id="FullCollTitle">Fullerton Collège</h4>
 
-                                2011 Berlin Study Abroad Program Promotional Video
+                                Vidéo promotionnelle du programme d'études à l'étranger de Berlin 2011
                                 <br />
-                                Spring 2011
+                                Printemps 2011
                                 <br />
 
                             </li>
@@ -201,12 +201,12 @@
                 </div>
                 <div class="panel panel-default" style="height: -webkit-fill-available;">
                     <div class="panel panel-header">
-                        Web Development<i class="glyphicon glyphicon-link"></i>
+                        Développement Web<i class="glyphicon glyphicon-link"></i>
                     </div>
                     <div class="panel panel-body" id="codingLanguages">
                         <ul class="list-inline">
                             <li class="list-inline-item">
-                                <h4 id="codingLanguagesHeader">Coding Languages/Skills</h4>
+                                <h4 id="codingLanguagesHeader">Codage Langues / Compétences</h4>
                                 HTML5, CSS3, BOOTSTRAP, SASS, LESS, Javascript, Java, JQuery, Nodejs, Expressjs, MySQL, Sequelize, Reactjs, MongoDB, Mongoose, Nightmare, AJAX, Firebase, Handlebars
                             </li>
                         </ul>
@@ -214,41 +214,41 @@
                 </div>
                 <div class="panel panel-default">
                     <div class="panel panel-header">
-                        Travels<i class="glyphicon glyphicon-globe"></i>
+                        Voyages<i class="glyphicon glyphicon-globe"></i>
                     </div>
                     <div class="panel panel-body" id="travels">
                         <ul class="list-inline">
                             <li class="list-inline-item">
-                                <h3 id="travelsAbout"> I am an avid traveler and believe that my travels have given me a broader perspective on the world and how it works.
-                                    By traveling I feel like I have become more adaptable to various situations, I can communicate with others more proficiently, and it has helped me further my education.
+                                <h3 id="travelsAbout"> Je suis un passionné de voyages et je crois que mes voyages m'ont donné une perspective plus large du monde et de son fonctionnement.
+                                     En voyageant, je sens que je suis devenu plus adaptable à diverses situations, je peux mieux communiquer avec les autres et cela m'a aidé à poursuivre mes études.
                                 </h3>
                             </li>
                             <li class="list-inline-item">
-                                <h4 id="nAmericaTitle">North America</h4>
-                                Canada, U.S.A. (States) - Arizona, Arkansas, California, Colorado, Idaho, Illinois, Iowa, Kansas, Kentucky, Maryland, Minnesota, Missouri, Montana, Nebraska, Nevada, New Mexico, North Dakota, Oregon, South Dakota, Tennessee, Texas, Utah, Virginia, Washington, Washington D.C., Wyoming
+                                <h4 id="nAmericaTitle">Amérique du Nord</h4>
+                                Canada, États-Unis (États) - Arizona, Arkansas, Californie, Colorado, Idaho, Illinois, Iowa, Kansas, Kentucky, Maryland, État du Minnesota, Missouri, Montana, Nebraska, Nevada, Nouveau-Mexique, Dakota du Nord, Oregon, Dakota du Sud, Tennessee, Texas, Utah, Virginie, Washington, Washington DC, Wyoming
                             </li>
                             <li class="list-inline-item">
-                                <h4 id="europeTitle">Europe</h4>
-                                Austria, Belgium, Bulgaria, Czech Republic, England, France, Germany, Greece, Hungary, Ireland, Italy, Monaco, Netherlands, Romania, Scotland, Spain, Switzerland, Vatican City
+                                <h4 id="europeTitle">L'Europe</h4>
+                                Autriche, Belgique, Bulgarie, République tchèque, Angleterre, France, Allemagne, Grèce, Hongrie, Irlande, Italie, Monaco, Pays-Bas, Roumanie, Écosse, Espagne, Suisse, Cité du Vatican
                             </li>
                             <li class="list-inline-item">
-                                <h4 id="asiaTitle">Asia</h4>
-                                China, Hong Kong, Japan, Macau, Philippines, Thailand, and Vietnam
+                                <h4 id="asiaTitle">Asie</h4>
+                                Chine, Hong Kong, Japon, Macao, Philippines, Thaïlande et Vietnam
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="panel panel-default">
                     <div class="panel panel-header">
-                        Languages<i class="glyphicon glyphicon-stats"></i>
+                        Langues<i class="glyphicon glyphicon-stats"></i>
                     </div>
                     <div class="panel panel-body" id="languages">
                         <ul class="list-inline">
                             <li class="list-inline-item" id="languagesList">
-                                <h4 id="English">English - Native Language</h4>
-                                <h4 id="German">German/Deutsch - B1/B2</h4>
-                                <h4 id="French">French/Français - B1/B2</h4>
-                                <h4 id="Chinese">Chinese/中文 - A1</h4>
+                                <h4 id="English">Anglais - Native Language</h4>
+                                <h4 id="German">Allemand - B1/B2</h4>
+                                <h4 id="French">Français - B1/B2</h4>
+                                <h4 id="Chinese">Chinois - A1</h4>
                             </li>
                         </ul>
                     </div>
