--- a/views/educationFR.hbs
+++ b/views/educationFR.hbs
@@ -107,13 +107,13 @@
             <div class="card" style="max-width: 100%; max-height:100%; background-color: white; border: solid lightgray 1px;">
                 <img class="card-img-top img-fluid" id="jayhawklogo" src="../Images/jayhawklogo.jpg">
                 <div class="card-title">
-                    Kansas Université
+                    Université du Kansas
                 </div>
                 <div class="card-body">
                     <ul style="list-style-type:disc;">
                         <li>Coding Boot Camp</li>
                         <li>Juin 2017-Mai 2018</li>
-                        <li>Intensive 52 week full-stack coding program designed to give students knowledge on a vast array of coding languages as well as constant hands-on experience building their own web apps.</li>
+                        <li>Programme intensif de codage en pile complète de 52 semaines conçu pour permettre aux étudiants d'acquérir des connaissances sur une vaste gamme de langages de codage, ainsi qu'une expérience pratique constante dans la création de leurs propres applications Web.</li>
                         <ul>
                 </div>
             </div>
@@ -127,13 +127,13 @@
             <div class="card" style="max-width: 100%; max-height:100%; background-color: white; border: solid lightgray 1px;">
                 <img class="card-img-top img-fluid" id="ucsdlogo" src="../Images/UCSD-logo.png">
                 <div class="card-title">
-                    Université Californie de San Diego
+                    Université de Californie à San Diego
                 </div>
                 <div class="card-body">
                     <ul style="list-style-type:disc;">
                         <li>Baccalauréat ès Arts</li>
                         <li>Septembre 2012-Août 2014</li>
-                        <li>My studies at UCSD consisted heavily of languages, history, and politics. I studied German and French throughout my tenure at UCSD while also obtaining a minor certification in international relations.</li>
+                        <li>Mes études à l’UCSD étaient principalement composées de langues, d’histoire et de politique. J'ai étudié l'allemand et le français tout au long de mon mandat à l'UCSD, tout en obtenant une certification mineure en relations internationales.</li>
                     </ul>
                 </div>
             </div>
@@ -147,13 +147,13 @@
             <div class="card" style="max-width: 100%; max-height:100%; background-color: white; border: solid lightgray 1px;">
                 <img class="card-img-top img-fluid" id="fullcolllogo" src="../Images/fullcolllogo.jpg">
                 <div class="card-title">
-                    Fullerton Université
+                    Fullerton Collège
                 </div>
                 <div class="card-body">
                     <ul style="list-style-type:disc;">
                         <li>Associé en Arts en Film</li>
                         <li>Janvier 2009-Mai 2012</li>
-                        <li>Bei Fullerton College I was proud to obtain both President's List and Dean's list status during 2/3 of my studies at the institution. I majored in Film, but also studied German, French, and Spanish as well as single-handedly produce a video to promote the Study Abroad Department. In consecutive years I studied both in Paris, France and Berlin, Germany which bolstered my language skills in addition to providing me with a better understanding of foreign culture.</li>
+                        <li>Au Fullerton College, j'étais fier d'avoir obtenu le statut de liste du président et celui du doyen au cours des deux tiers de mes études à l'établissement. Je me suis spécialisé en cinéma, mais j'ai aussi étudié l'allemand, le français et l'espagnol, et produit à lui seul une vidéo destinée à promouvoir le département des études à l'étranger. Durant des années consécutives, j'ai étudié à Paris, en France et à Berlin, en Allemagne, ce qui a renforcé mes compétences linguistiques et m'a permis de mieux comprendre la culture étrangère.</li>
                     </ul>
                 </div>
             </div>
