--- a/views/experienceFR.hbs
+++ b/views/experienceFR.hbs
@@ -103,13 +103,13 @@
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                 <img class="card-img-top img-fluid" id="zjutlogo" src="../Images/zjutlogo.png">
                     <div class="card-title">
-                        Zhejiang University of Technology/浙江工业大学
+                        Université de technologie du Zhejiang
                     </div>
                         <div class="card-body">
                             <ul style="list-style-type:disc;">
-                                <li>Professor - English & Web Development</li>
-                                <li>May 2018-May 2019</li>
-                                <li>I taught a total of 160 university students the basics of web development in English.  Langauges covered were primarily HTML5, CSS3, Javascript, and JQuery.  It was important for the students to learn both coding and the eseentials of English concurrently as one cannot code in Chinese.
+                                <li>Professeur - Développement anglais et Web</li>
+                                <li>Mai 2018-Mai 2019</li>
+                                <li>J'ai enseigné à 160 étudiants universitaires les bases du développement Web en anglais. Les langues utilisées étaient principalement HTML5, CSS3, Javascript et JQuery. Il était important que les étudiants apprennent simultanément le codage et les notions essentielles de l'anglais, car ils ne peuvent pas coder en chinois.
                                 </li>
                             </ul>
                         </div>
@@ -122,13 +122,13 @@
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                 <img class="card-img-top img-fluid" id="jayhawklogo" src="../Images/jayhawklogo.jpg">
                     <div class="card-title">
-                        Kansas University
+                        Université du Kansas
                     </div>
                         <div class="card-body">
                             <ul style="list-style-type:disc;">
-                                <li>Student - Full-Stack Web Development Program</li>
-                                <li>June 2017-May 2018</li>
-                                <li>This program consisted of roughly 52 weeks of learning the essentials of full-stack web development.  As the course progressed students built upon what they learned and our projects became increasingly more complex.  Beyond a regular coding program, we had already completed several individual and group projects prior to the end of the course so that we had as close to real-world experience as possible.
+                                <li>Étudiant - Programme de développement Web Full-Stack</li>
+                                <li>Juin 2017-Mai 2018</li>
+                                <li>Ce programme a consisté en environ 52 semaines d'apprentissage de l'essentiel du développement Web en continu. Au fur et à mesure que le cours progressait, les étudiants ont construit sur ce qu'ils avaient appris et nos projets sont devenus de plus en plus complexes. Au-delà d’un programme de codage régulier, nous avions déjà mené à bien plusieurs projets individuels et en groupe avant la fin du cours, de sorte que nous possédions une expérience aussi proche que possible du monde réel.
                                 </li>
                             </ul>
                         </div>
