--- a/views/photoFR.hbs
+++ b/views/photoFR.hbs
@@ -73,7 +73,7 @@
             <a class="nav-link" href="/photo"><span class="flag-icon flag-icon-us"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/experienceCN"><span class="flag-icon flag-icon-cn"></span></a>
+            <a class="nav-link" href="/photoCN"><span class="flag-icon flag-icon-cn"></span></a>
         </li>
         <li class="nav-item list-item-inline">
             <a class="nav-link" href="/photoDE"><span class="flag-icon flag-icon-de"></span></a>
@@ -129,7 +129,7 @@
                     <img class="card-img-top img-fluid" id="HKLights" src="../Images/CNHKNightStreaks.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                Busy criss-crossing streets in Hong Kong at night provide for a beautiful setting of streaks and skyscrapers.
+                                La nuit, les rues animées qui sillonnent Hong Kong offrent un cadre magnifique de traînées et de gratte-ciels.
                             </p>
                         </div>
                 </div>
@@ -151,7 +151,7 @@
                     <img class="card-img-top img-fluid" id="DieWelle" src="../Images/DEDieWelle2.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                An office building in Hamburg, Germany known as "Die Welle" (The Wave).  It was a beautiful and interesting building to photograph and easily missed if one doesn't know its location.
+                                Un immeuble de bureaux à Hambourg, en Allemagne, connu sous le nom de "Die Welle" (The Wave). C'était un bâtiment magnifique et intéressant à photographier et facilement manqué si l'on ne connaît pas son emplacement.
                             </p>
                         </div>
                 </div>
@@ -173,7 +173,7 @@
                     <img class="card-img-top img-fluid" id="Singel" src="../Images/NLAmsterdamCanalScape2.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                An area in Amsterdam known as "Singel" and is near the heart of the city.  The colors at night along with the houseboats and reflection from the canal are simply awesome.
+                                Un quartier d'Amsterdam connu sous le nom de "Singel" et proche du coeur de la ville. Les couleurs de la nuit avec les péniches et le reflet du canal sont tout simplement géniaux.
                             </p>
                         </div>
                 </div>
@@ -200,7 +200,7 @@
                 <img class="card-img-top img-fluid" id="redHat" src="../Images/KoreanHat.jpg">
                     <div class="mask flex-center rgba-blue-strong">
                         <p class="white-text">
-                            A friend of mine with her back turned to the camera wearing a bright red hat.
+                            Une de mes amies, le dos tourné à la caméra, portait un chapeau rouge vif.
                         </p>
                     </div>
             </div>
@@ -222,7 +222,7 @@
                     <img class="card-img-top img-fluid" id="HorseShoe" src="../Images/AZHSBHDR.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                Located near the famous Antelope Canyon this spot is known as Horseshoe Bend in northern Arizona.
+                                Situé à proximité du célèbre canyon Antelope, cet endroit est connu sous le nom de Horseshoe Bend, dans le nord de l'Arizona.
                             </p>
                         </div>
                 </div>
@@ -244,7 +244,7 @@
                     <img class="card-img-top img-fluid" id="Tron" src="../Images/CNTron.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                A building named the "White Horse Convention Center" in Hangzhou, China is illuminated in a way that invokes memories of the movie Tron.
+                                Un bâtiment appelé "White Horse Convention Center" à Hangzhou, en Chine, est illuminé de manière à rappeler les souvenirs du film Tron.
                             </p>
                         </div>
                 </div>
@@ -266,7 +266,7 @@
                     <img class="card-img-top img-fluid" id="Kanzler" src="../Images/BerlinWashingMachineRV.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                The Bundeskanzleramt in Berlin, Germany where the Chancellor of Germany works.  This part of the building is known as the "Washing Machine" due to its circular nature.
+                                Le Bundeskanzleramt à Berlin, en Allemagne, où travaille le chancelier allemand. Cette partie du bâtiment est appelée "Machine à laver" en raison de sa nature circulaire.
                             </p>
                         </div>
                 </div>
@@ -293,7 +293,7 @@
                 <img class="card-img-top img-fluid" id="Groningen" src="../Images/NLGroningenColors1.jpg">
                     <div class="mask flex-center rgba-blue-strong">
                         <p class="white-text">
-                            Some colored houses with a great reflection near a shopping mall in the small Dutch city of Groningen.
+                            Quelques maisons colorées avec un grand reflet près d'un centre commercial dans la petite ville néerlandaise de Groningue.
                         </p>
                     </div>
             </div>
@@ -315,7 +315,7 @@
                     <img class="card-img-top img-fluid" id="Macau" src="../Images/MacauGreenTwist.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                A random apartment building in Macau taken in a vertical panorama style causing the edges to extrude a bit.
+                                Un immeuble d'habitation aléatoire à Macao pris dans un style de panorama vertical provoquant l'extrusion des bords.
                             </p>
                         </div>
                 </div>
@@ -337,7 +337,7 @@
                     <img class="card-img-top img-fluid" id="Crucifix" src="../Images/MacauFlyingCrucifix3.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                Another random apartment building shot from inside the courtyard in Macau.  The buildings above looked very interesting and seem to form a crucifix.
+                                Un autre immeuble d'appartements tiré au hasard tiré de l'intérieur de la cour à Macao. Les bâtiments ci-dessus semblaient très intéressants et semblaient former un crucifix.
                             </p>
                         </div>
                 </div>
@@ -359,7 +359,7 @@
                     <img class="card-img-top img-fluid" id="Dunes" src="../Images/COSandDunesBeerBackpack.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                A photo of my camera backpack with traveling beer at the Great Sand Dunes outside of Alamosa, Colorado.
+                                Une photo de mon sac à dos avec de la bière de voyage dans les Great Sand Dunes, à l'extérieur d'Alamosa, dans le Colorado.
                             </p>
                         </div>
                 </div>
