--- a/views/webPortFR.hbs
+++ b/views/webPortFR.hbs
@@ -73,7 +73,7 @@
             <a class="nav-link" href="/webPort"><span class="flag-icon flag-icon-us"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/experienceCN"><span class="flag-icon flag-icon-cn"></span></a>
+            <a class="nav-link" href="/webPortCN"><span class="flag-icon flag-icon-cn"></span></a>
         </li>
         <li class="nav-item list-item-inline">
             <a class="nav-link" href="/webPortDE"><span class="flag-icon flag-icon-de"></span></a>
@@ -111,7 +111,7 @@
                 <img class="card-img-top img-fluid" id="tat" src="../Images/tatUI.png">
                     <div class="mask flex-center rgba-blue-strong">
                         <p class="white-text">
-                            Your one-stop website for all the travel knowledge you need to become less of a tourist and more of an adaptive traveler...
+                            Votre site Web unique pour toutes les connaissances de voyage dont vous avez besoin pour devenir moins un touriste et plus un voyageur adaptatif ...
                         </p>
                     </div>
                 </div>
@@ -135,7 +135,7 @@
                 <img class="card-img-top img-fluid" id="clicktrip" src="../Images/clicktripUI.png">
                 <div class="mask flex-center rgba-blue-strong">
                     <p class="white-text">
-                        A website designed for those that love to take photographs while traveling.  This site specializes in the off-the-beaten-path photo locations not as widely known about by most travelers.
+                        Un site Web conçu pour ceux qui aiment prendre des photos tout en voyageant. Ce site est spécialisé dans les lieux de photo hors des sentiers battus, moins connus de la plupart des voyageurs.
                     </p>
                 </div>
             </div>
@@ -156,7 +156,7 @@
                 <img class="card-img-top img-fluid" id="inPhotos" src="../Images/IPLOGO.jpg">
                     <div class="mask flex-center rgba-blue-strong">
                         <p class="white-text">
-                             A website where one can order several different styles of prints ranging from acrylic, to aluminum, and more.  The website is only applicable in Mainland China.
+                             Un site Web sur lequel vous pouvez commander différents styles d’impressions, allant de l’acrylique à l’aluminium, etc. Le site Web est uniquement applicable en Chine continentale.
                         </p>
                     </div>
             </div>
