--- a/views/videoFR.hbs
+++ b/views/videoFR.hbs
@@ -73,7 +73,7 @@
             <a class="nav-link" href="/video"><span class="flag-icon flag-icon-us"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/experienceCN"><span class="flag-icon flag-icon-cn"></span></a>
+            <a class="nav-link" href="/videoCN"><span class="flag-icon flag-icon-cn"></span></a>
         </li>
         <li class="nav-item list-item-inline">
             <a class="nav-link" href="/videoDE"><span class="flag-icon flag-icon-de"></span></a>
