--- a/views/experience.hbs
+++ b/views/experience.hbs
@@ -70,13 +70,13 @@
     <!-- Language Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/homeCN"><span class="flag-icon flag-icon-cn"></span></a>
+            <a class="nav-link" href="/experienceCN"><span class="flag-icon flag-icon-cn"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/homeDE"><span class="flag-icon flag-icon-de"></span></a>
+            <a class="nav-link" href="/experienceDE"><span class="flag-icon flag-icon-de"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/homeFR"><span class="flag-icon flag-icon-fr"></span></a>
+            <a class="nav-link" href="/experienceFR"><span class="flag-icon flag-icon-fr"></span></a>
         </li>
     </ul>
     <!-- Links -->
@@ -96,7 +96,6 @@
 <!--End Navbar-->
 
 <!--Start Top Row-->
-
 <div class="container-fluid">
     <div class="row">
         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
