--- a/views/experienceFR.hbs
+++ b/views/experienceFR.hbs
@@ -97,7 +97,7 @@
 
 <!--Start Top Row-->
 
-<div class="container-fluid">
+<div class="container-fluid" style="height: 1500px !important;">
     <div class="row">
         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
