--- a/views/about.hbs
+++ b/views/about.hbs
@@ -73,13 +73,13 @@
     <!-- Language Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/homeCN"><span class="flag-icon flag-icon-cn"></span></a>
+            <a class="nav-link" href="/aboutCN"><span class="flag-icon flag-icon-cn"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/homeDE"><span class="flag-icon flag-icon-de"></span></a>
+            <a class="nav-link" href="/aboutDE"><span class="flag-icon flag-icon-de"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/homeFR"><span class="flag-icon flag-icon-fr"></span></a>
+            <a class="nav-link" href="/aboutFR"><span class="flag-icon flag-icon-fr"></span></a>
         </li>
     </ul>
         <!-- Links -->
