--- a/views/aboutCN.hbs
+++ b/views/aboutCN.hbs
@@ -73,13 +73,13 @@
     <!-- Language Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/contact"><span class="flag-icon flag-icon-us"></span></a>
+            <a class="nav-link" href="/about"><span class="flag-icon flag-icon-us"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/contactDE"><span class="flag-icon flag-icon-de"></span></a>
+            <a class="nav-link" href="/aboutDE"><span class="flag-icon flag-icon-de"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/contactFR"><span class="flag-icon flag-icon-fr"></span></a>
+            <a class="nav-link" href="/aboutFR"><span class="flag-icon flag-icon-fr"></span></a>
         </li>
     </ul>
         <!-- Links -->
